# oonline

./: ProjectHome.md
CEGUI/: Makefile.in  aclocal.m4  cegui.lua  configure
CEGUI/ImageCodecModules/: Makefile.in
CEGUI/ImageCodecModules/CoronaImageCodec/: Makefile.in
CEGUI/ImageCodecModules/DevILImageCodec/: Makefile.in
CEGUI/RendererModules/: Makefile.in
CEGUI/Samples/: Makefile.in
CEGUI/ScriptingModules/: Makefile.in
CEGUI/WindowRendererSets/: Makefile.in
CEGUI/XMLParserModules/: Makefile.in
CEGUI/include/: config.h
CEGUI/makefiles/: Makefile.in
CEGUI/src/: Makefile.in
FakeClient/: FakeChunkHandler.cpp  FakeClient.cpp  FakeClient.h  FakeClient.vcproj  FakeEntityUpdateManager.cpp
Lua/: Lua.vcproj
NetDebug/: NetDebug.cpp
OOCommon/: Chunk.cpp  Chunk.h  ChunkHandler.h  Configuration.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityUpdateManager.cpp  EntityUpdateManager.h  ExceptionNote.txt  GlobalDefines.h  IOProvider.h  IOSystem.cpp  IOSystem.h  InNetStream.cpp  InNetStream.h  InPacket.h  LogIOProvider.h  NetSend.h  NetSendActorValue.cpp  NetSendChat.cpp  NetSendEquip.cpp  NetSendPosition.cpp  NetworkBuffer.cpp  NetworkBuffer.h  NetworkConnection.cpp  NetworkConnection.h  OOCommon.vcproj  OOHashTable.h  ObjectChunkHandler.cpp  OutPacket.h  OutPacketStream.cpp  OutPacketStream.h  Packets.cpp  Packets.h  PositionChunkHandler.cpp  StatChunkHandler.cpp  TaskHandler.cpp  TaskHandler.h
OOFilesystem/: OOFileSystem.h  OOFilesystem.vcproj  OOGUID.h
OOLauncher/: OOLauncher.csproj
OblivionOnline/: AnimationCommands.cpp  ChatTalker.h  ChunkHandler.h  ClientEntity.h  ClientEntityManager.cpp  ClientEntityManager.h  ClientEntityUpdateManager.cpp  ClientEntityUpdateManager.h  CommandWrapper.cpp  CommandWrapper.h  Commands.h  ConnectCommands.cpp  D3DHook.cpp  D3DHook.h  DisconnectCommands.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityUpdateManager.cpp  EquipCommands.cpp  Event.h  EventSystem.cpp  EventSystem.h  FakeD3D.h  FakeDI8.h  GameClient.cpp  GameClient.h  GameCommand.h  GameInject.cpp  GameInject.h  HandleAVChunk.cpp  HandleAnimationChunk.cpp  HandleCellIDChunk.cpp  HandleChatChunk.cpp  HandleClassChunk.cpp  HandleEquipChunk.cpp  HandleGenderChunk.cpp  HandleMiscChunk.cpp  HandleNameChunk.cpp  HandleObjectChunk.cpp  (+26 more)
OblivionOnline/cegui/: CEGUIXMLSerializer.h
OblivionOnlineModFiles/: OblivionOnline.esp
OblivionOnlineServer/: AuthentificationProvider.h  CMakeLists.txt  ChatIOProvider.cpp  ChatIOProvider.h  CoreAdminModules.h  EntityUpdateManager.cpp  Event.cpp  Event.h  EventSystem.cpp  EventSystem.h  ExternInterface.h  GameServer.cpp  GameServer.h  LuaSystem.cpp  LuaSystem.h  MiscChunkHandler.cpp  Module.cpp  Module.h  ModuleAdminModule.cpp  ModuleManager.cpp  ModuleManager.h  NetworkSystem.cpp  NetworkSystem.h  OblivionOnlineServer.vcproj  Player.cpp  Player.h  PlayerAdminModule.cpp  PlayerManager.cpp  PlayerManager.h  RemoteAdminModule.h  RemoteAdminServer.cpp  RemoteAdminServer.h  ScreenIOProvider.cpp  ScreenIOProvider.h  ServerEntityUpdateManager.cpp  ServerEntityUpdateManager.h  ServerLaunch.lua  main.cpp  panic.cpp
OfficialPlugins/core_serverbrowser/: ReadMe.txt  core_serverbrowser.cpp  core_serverbrowser.vcproj  dllmain.cpp
PluginSample/: InteropSample.cpp  PluginSample.cpp  PluginSample.vcproj  ReadMe.txt  dllmain.c  pluginsample.h
Setup/: Setup.vdproj
Tests_Common/: EntityTest.cpp  ReadMe.txt  Tests_Common.vcproj
common/: common.vcproj
obse/obse/: GameAPI.cpp  GameAPI.h  GameBSExtraData.cpp  GameBSExtraData.h  GameCommands.cpp  GameCommands.h  GameData.cpp  GameData.h  GameExtraData.cpp  GameExtraData.h  GameForms.cpp  GameForms.h  GameMenus.cpp  GameMenus.h  GameObjects.cpp  GameObjects.h  GameTiles.cpp  GameTiles.h  GameTypes.cpp  GameTypes.h  NiNodes.h  ParamInfos.h  PluginAPI.h  Utilities.cpp  Utilities.h  obse.vcproj
(+76 files in other folders)
